fixed missing background image, added message sent alert

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,7 +93,7 @@
   width: 100%;
   padding: 1px;
   border: 0px solid black;
-  background-image: url(https://wallpapersmug.com/download/3840x2400/ba8e68/clean-lake-mountains-range-trees-nature-4k.jpg);
+  
   background-size: cover;
   display: flex;
   flex-direction: column;
